# arize-agent-kit

./: .gitignore  .pre-commit-config.yaml  COLLECTOR_ARCHITECTURE.md  DEVELOPMENT.md  README.md  codecov.yml  config.yaml  install.bat  install.py  install.sh  pyproject.toml  python-rewrite.md
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
claude-code-tracing/: README.md  constants.py  install.py
claude-code-tracing/.claude-plugin/: plugin.json
claude-code-tracing/hooks/: common.sh  notification.sh  permission_request.sh  post_tool_use.sh  session_start.sh  stop.sh  subagent_stop.sh  user_prompt_submit.sh
claude-code-tracing/scripts/: setup.sh
claude-code-tracing/skills/manage-claude-code-tracing/: SKILL.md
claude-code-tracing/skills/setup-claude-code-tracing/: SKILL.md
claude_code_tracing/: README.md  constants.py  install.py
claude_code_tracing/hooks/: adapter.py  handlers.py  hooks.json
codex-tracing/: README.md  constants.py  install.py  install.sh
codex-tracing/hooks/: common.sh  notify.sh
codex-tracing/scripts/: codex_proxy.sh  collector.py  collector_ctl.sh  setup.sh
codex-tracing/skills/manage-codex-tracing/: SKILL.md
codex-tracing/skills/setup-codex-tracing/: SKILL.md
codex_tracing/: README.md  codex_buffer.py  codex_buffer_ctl.py  constants.py  install.py
codex_tracing/hooks/: adapter.py  handlers.py  proxy.py
codex_tracing/skills/manage-codex-tracing/: SKILL.md
copilot-tracing/: README.md  constants.py  install.py
copilot-tracing/skills/manage-copilot-tracing/: SKILL.md
copilot_tracing/: README.md  install.py
copilot_tracing/hooks/: handlers.py
copilot_tracing/skills/manage-copilot-tracing/: SKILL.md
core/: codex_buffer.py  codex_buffer_ctl.py  collector.py  collector_ctl.py  collector_ctl.sh  common.py  common.sh  config.py  constants.py  send_arize.py
core/hooks/claude/: adapter.py  handlers.py
core/hooks/codex/: adapter.py  handlers.py  proxy.py
core/hooks/copilot/: adapter.py  handlers.py
core/hooks/cursor/: adapter.py  handlers.py
core/installer/: __main__.py  cli.py  collector.py  detect.py
core/installer/harnesses/: base.py  claude.py  codex.py  cursor.py
core/setup/: __init__.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  kiro.py  wipe.py
core/vscode_bridge/: __init__.py  cli.py  codex.py  install.py  models.py  status.py
cursor-tracing/: README.md  constants.py  hooks.json  install.py
cursor-tracing/hooks/: common.sh  hook-handler.sh
cursor-tracing/scripts/: setup.sh
cursor-tracing/skills/manage-cursor-tracing/: SKILL.md
cursor-tracing/skills/setup-cursor-tracing/: SKILL.md
cursor_tracing/: README.md  constants.py  install.py
cursor_tracing/hooks/: adapter.py  handlers.py
cursor_tracing/skills/manage-cursor-tracing/: SKILL.md
docs/: COLLECTOR_ARCHITECTURE.md  TRACING_ARCHITECTURE.md
gemini_tracing/: README.md  install.py
gemini_tracing/hooks/: adapter.py  handlers.py
gemini_tracing/skills/manage-gemini-tracing/: SKILL.md
state/claude-code/: state_093f447b-56d4-49d4-9fb4-416156a0f1d2.yaml  state_21426.yaml  state_266389ba-6be6-4564-9d24-51fc7c55a2de.yaml  state_b899a9c2-16ef-4b76-8ee4-c485b9c1e58a.yaml  state_bdf36db6-4dcf-411c-981d-8f19e668a9d5.yaml  state_efa8556b-6632-461d-905c-eec3fd95366a.yaml  state_efeaca90-7d18-4c12-8d5d-6d8ae77e7369.yaml  state_f44de878-f0b4-4dd2-b81e-e34eadb3c368.yaml  state_test-123.yaml  state_test-debug.yaml  state_test-diag-001.yaml  state_test-ssl-fixed.yaml
tests/: conftest.py  test_activity_bar_icon.py  test_claude_adapter.py  test_claude_agent_sdk.py  test_claude_hook.py  test_claude_hook_compact.py  test_claude_hook_permission_denied.py  test_claude_readme_and_skill.py  test_codex_adapter.py  test_codex_buffer.py  test_codex_buffer_ctl.py  test_codex_buffer_integration.py  test_codex_hook.py  test_codex_proxy.py  test_codex_readme_and_skill.py  test_collector_ctl.py  test_collector_deletion.py  test_common.py  test_config.py  test_constants.py  test_copilot_adapter.py  test_copilot_hook.py  test_copilot_install.py  test_copilot_readme_and_skill.py  test_copilot_transcript.py  test_cursor_adapter.py  test_cursor_hook.py  test_cursor_readme_and_skill.py  test_doc_fixes.py  test_final_verification.py  test_fixtures.py  test_gemini_adapter.py  test_gemini_hook.py  test_gemini_install.py  test_gemini_readme_and_skill.py  test_harness_base.py  test_hook_registrations.py  test_install.py  test_install_claude.py  test_install_codex.py  (+27 more)
tests/core/: test_common.py  test_wire_entry_points.py
tests/fixtures/: README.md  claude_session_start.json  claude_stop.json  codex_notify.json  cursor_after_shell.json  cursor_before_submit.json  golden_span.json  sample_transcript.jsonl
tracing/claude_code/: README.md  __init__.py  agent_sdk.py  constants.py  install.py
tracing/claude_code/.claude-plugin/: plugin.json
tracing/claude_code/hooks/: handlers.py  hooks.json
tracing/claude_code/scripts/: run-hook
tracing/codex/: README.md  codex_buffer.py  codex_buffer_ctl.py  install.py
tracing/codex/hooks/: adapter.py  handlers.py  proxy.py
tracing/copilot/: README.md  install.py
tracing/copilot/hooks/: adapter.py  handlers.py  transcript.py
tracing/cursor/: README.md  install.py
tracing/cursor/hooks/: adapter.py  handlers.py
tracing/gemini/: README.md  install.py
tracing/gemini/hooks/: adapter.py  handlers.py
tracing/kiro/: README.md  install.py
vscode-extension/: .gitignore  .vscodeignore  README.md  build-wheel.js  esbuild.js  jest.config.js  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: sidebar.html  sidebar.js  wizard.css  wizard.html  wizard.js
vscode-extension/src/: bootstrap.ts  bridge.ts  extension.ts  installer.ts  python.ts  sidebar.ts  sidebarState.ts  status.ts  statusBar.ts  teardown.ts  types.ts  uninstall.ts  wizard.ts
vscode-extension/test/: bridge.test.js  build-wheel.test.js  extension.test.js  installer.test.js  python.test.js  scaffold.test.js  sidebar-state.test.js  sidebar.test.js  wizard-ui.test.js  wizard.test.js
(+16 files in other folders)
